--- a/example/demo_app/templates/demo_app/partials/task_list_partial.html
+++ b/example/demo_app/templates/demo_app/partials/task_list_partial.html
@@ -3,5 +3,5 @@
         {% include 'demo_app/partials/task_item.html' %}
     {% endfor %}
 {% else %}
-    <p style="color: #666; font-style: italic;">No tasks yet. Add one above!</p>
+    <p class="text-gray-600 dark:text-gray-400 italic">No tasks yet. Add one above!</p>
 {% endif %}
